fix(): fix bug when resizing navbar. Button's height "Faire un don" wasn't properly vertically aligned

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,6 +397,9 @@ footer li{
 
 
 
+
+
+
 #videos {
     display: flex;
     flex-direction: column;
@@ -633,18 +636,11 @@ footer li{
     }
 
 
-
-
-
-
-
-
-
 }
 
-
-
-
+#faire-un-don {
+    white-space: nowrap;
+}
 
 
 
